# CppCodewars

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  cmake_install.cmake  codewars  codewars.cbp  main  main.cpp  playing  playing.cpp
Chain/include /: chain.hpp
Chain/src/: chain.cpp
Diophantine/: dioph  diophantine_solution.cpp
FindPartialOutlier/: find  findoutlier.cpp
Gap_between_primes/: GAP.cpp
IntegersRecreationOne/: integer  integers.cpp
PathReduction/: PR  PR.cpp
Poker/include/: Poker.hpp
Poker/src/: Poker.cpp
Rect_in_squa/: rect  rect_in_squa.cpp
Roman/include/: Roman.hpp
Roman/src/: result.cpp
SomeEgyptianFractions/: Some.cpp  some
